# solver_speed_test

./: CMakeLists.txt  CuPtr.cuh  CudaManager.cu  CudaManager.h  Culocator.cu  Culocator.h  FindSuiteSparse.cmake  b  out.xlsx  readme.md  solver.cpp  solver.h  test2_cu.vcxproj
Linux-build/: CMakeLists.txt  FindDeps.cmake  FindMKL.cmake
common/: helper_cuda.h  helper_cuda_80.h
